# convperf

./: .gitmodules  CMakeLists.txt  README.md  convperf.py  requirements.txt
benchmark_sizes/: resnet50.json  resnet50.txt
cmake/: libxsmm.cmake
common/: CMakeLists.txt  runner.h  utils.cpp  utils.h
iree/: CMakeLists.txt  compile_conv.py  device_cpu.c  iree.cpp  iree.h
naive/: CMakeLists.txt  naive.cpp  naive.h
python/: verify.py
tools/: CMakeLists.txt  benchmark_conv.cpp  verify_conv.cpp
xsmm/: CMakeLists.txt  xsmm.cpp  xsmm.h
